--- a/zadania/Z04 - iloraz dwóch liczb/index.html
+++ b/zadania/Z04 - iloraz dwóch liczb/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <title> Z04 - iloraz dwóch liczb</title>
@@ -15,18 +15,20 @@
 
 <section>
     <p>
-        Napisz program, który dla czterech liczb rzeczywistych oblicza i wyświetla ich średnią geometryczną. Wynik wyświetl w dwóch postaciach. Bez zaokrąglenia oraz z zaokrągleniem do trzech miejsc po przecinku.
-    </p>
-    <label for="liczba_a">podaj a:</label> <input type="text" id="liczba_a" ><br>
+        Napisz program, który oblicza i wyświetla iloraz 2 liczb rzeczywistych z dokładnością do dwóch miejsc po przecinku.
+        Zwróć uwagę, co się stanie jeśli spróbujesz podzielić wartość a przez 0. Reakcja aplikacji będzie różna w języku JavaScript i PHP. Na razie nie musimy zabezpieczać programu przed tym błędem. Wrócimy do tego projektu po opanowaniu instrukcji warunkowych.    </p>
+    <label for="licznik"> podaj licznik:</label> <input type="text" id="licznik" ><br>
 
-    <label for="liczba_b">podaj b:</label> <input type="text" id="liczba_b" ><br>
+    <label for="mianownik"> podaj mianownik:</label> <input type="text" id="mianownik" ><br>
 
 
-    <button> oblicz średnią geometryczną </button>
+    <button> oblicz iloraz podanych liczb</button>
+</section>
+<section id="wynik">
+    ...
 </section>
 
-
-<section id="wynik">
+<section>
 
 </section>
 
