--- a/zadania/Z06 - wzór Herona/index.html
+++ b/zadania/Z06 - wzór Herona/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> Z06 - wzór Herona </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+    <h1>
+        Z06 - wzór Herona
+    </h1>
+    <h2> Autor: Viktoriia Oliinyk</h2>
+    <hr>
+</header>
 
+<section>
+<p>
+    Napisz program, który oblicza pole trójkąta na podstawie długości jego boków za pomocą wzoru Herona. W pierwszej wersji aplikacji nie nusisz uwzględniać sytuacji, w której z podanych liczb nie można zbudować trójkąta (np. 10, 2, 2). Problem rozwiążemy po opanowaniu instrukcji warunkowej.
+</p>
+
+    <label for="bok_a">podaj długość boku a:</label> <input type="text" id="bok_a" ><br>
+
+    <label for="bok_b">podaj długość boku b:</label> <input type="text" id="bok_b" ><br>
+
+    <label for="bok_c">podaj długość boku c:</label> <input type="text" id="bok_c" ><br>
+    <button> oblicz pole</button>
+
+</section>
+
+
+<section id="wynik">
+    ...
+</section>
+
+<script src="main.js"></script>
 </body>
 </html>
